// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GroupDetailPage snapshot tests > matches snapshot with completed group 1`] = `
<div>
  <div
    data-testid="app-layout"
  >
    <h1>
      Alpha Savings Circle
    </h1>
    <div
      class="MuiStack-root css-v2woy3-MuiStack-root"
    >
      <div
        data-testid="app-card"
      >
        <div
          class="MuiStack-root css-1sazv7p-MuiStack-root"
        >
          <div
            class="MuiBox-root css-1qocved"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 css-o2za6n-MuiTypography-root"
            >
              Alpha Savings Circle
            </h2>
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1lflu6f-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
              >
                completed
              </span>
            </div>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-k16oju-MuiTypography-root"
          >
            Monthly savings pool for community members
          </p>
          <div
            class="MuiBox-root css-0"
          >
            <div
              class="MuiBox-root css-wax5jp"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
              >
                Progress
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
              >
                60.0
                %
              </p>
            </div>
            <span
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="60"
              class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-2v94yv-MuiLinearProgress-root"
              role="progressbar"
            >
              <span
                class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
                style="transform: translateX(-40%);"
              />
            </span>
            <span
              class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
            >
              300
               / 
              500
               XLM
            </span>
          </div>
          <div
            class="MuiBox-root css-13rcduy"
          >
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-8m2o99-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
              >
                5 members
              </span>
            </div>
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-8m2o99-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
              >
                monthly
              </span>
            </div>
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-outlinedPrimary css-19gasz3-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
              >
                100 XLM / cycle
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        data-testid="app-card"
      >
        <div
          class="MuiBox-root css-10rrmwz"
        >
          <div
            class="MuiBox-root css-3caazb"
          />
          <div
            class="MuiBox-root css-10egq61"
          >
            <button
              class="btn btn-secondary btn-md"
              role="button"
            >
              Share Group
            </button>
            <button
              type="button"
            >
              Export report
            </button>
          </div>
        </div>
      </div>
      <div
        data-testid="app-card"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 css-wi73g9-MuiTypography-root"
        >
          Member Contributions by Cycle
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body2 css-19b5ozw-MuiTypography-root"
        >
          Shows whether each member has paid (✓), missed (✗), or has a pending contribution for each cycle.
        </p>
        <div
          class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiTableContainer-root css-lk5pgi-MuiPaper-root-MuiTableContainer-root"
        >
          <table
            class="MuiTable-root css-1xwxv7r-MuiTable-root"
          >
            <thead
              class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head css-1qalj09-MuiTableRow-root"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-8pm5ul-MuiTableCell-root"
                  scope="col"
                >
                  Member
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeSmall css-16bviqr-MuiTableCell-root"
                  scope="col"
                >
                  Cycle 
                  1
                  <div
                    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-filledSuccess css-n9njq5-MuiChip-root"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                    >
                      completed
                    </span>
                  </div>
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeSmall css-16bviqr-MuiTableCell-root"
                  scope="col"
                >
                  Cycle 
                  2
                  <div
                    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-filledPrimary css-1xmj4fw-MuiChip-root"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                    >
                      active
                    </span>
                  </div>
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall css-1rbfj31-MuiTableCell-root"
                  scope="col"
                >
                  Total
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-hover css-1xtozoh-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-653opj-MuiAvatar-root"
                    >
                      A
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
                      >
                        Anonymous
                      </p>
                      <span
                        class="MuiTypography-root MuiTypography-caption css-hqw96t-MuiTypography-root"
                      >
                        GMEMBE
                        …
                        BER1
                      </span>
                    </div>
                    <div
                      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1p7fxmr-MuiChip-root"
                    >
                      <span
                        class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                      >
                        Inactive
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Missed"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19vled7-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="CancelIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12z"
                    />
                  </svg>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Pending"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-9144eg-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="AccessTimeIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall css-17j8okc-MuiTableCell-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-vi8kcg-MuiTypography-root"
                  >
                    300
                     XLM
                  </p>
                </td>
              </tr>
              <tr
                class="MuiTableRow-root MuiTableRow-hover css-1xtozoh-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-653opj-MuiAvatar-root"
                    >
                      A
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
                      >
                        Anonymous
                      </p>
                      <span
                        class="MuiTypography-root MuiTypography-caption css-hqw96t-MuiTypography-root"
                      >
                        GMEMBE
                        …
                        BER2
                      </span>
                    </div>
                    <div
                      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1p7fxmr-MuiChip-root"
                    >
                      <span
                        class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                      >
                        Inactive
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Missed"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19vled7-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="CancelIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12z"
                    />
                  </svg>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Pending"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-9144eg-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="AccessTimeIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall css-17j8okc-MuiTableCell-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-vi8kcg-MuiTypography-root"
                  >
                    300
                     XLM
                  </p>
                </td>
              </tr>
              <tr
                class="MuiTableRow-root MuiTableRow-hover css-1xtozoh-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-653opj-MuiAvatar-root"
                    >
                      A
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
                      >
                        Anonymous
                      </p>
                      <span
                        class="MuiTypography-root MuiTypography-caption css-hqw96t-MuiTypography-root"
                      >
                        GABC12
                        …
                        3XYZ
                      </span>
                    </div>
                    <div
                      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1p7fxmr-MuiChip-root"
                    >
                      <span
                        class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                      >
                        Inactive
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Missed"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19vled7-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="CancelIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12z"
                    />
                  </svg>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Pending"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-9144eg-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="AccessTimeIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall css-17j8okc-MuiTableCell-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-vi8kcg-MuiTypography-root"
                  >
                    200
                     XLM
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        data-testid="app-card"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 css-wi73g9-MuiTypography-root"
        >
          Payout Rotation Timeline
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body2 css-19b5ozw-MuiTypography-root"
        >
          The order in which members receive the pooled payout. Past recipients are shown in green; the next recipient is highlighted.
        </p>
        <div
          class="MuiStack-root css-10kbc59-MuiStack-root"
        >
          <div
            class="MuiBox-root css-14rjhyx"
          >
            <div
              class="MuiBox-root css-5bm8se"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19pfla-MuiSvgIcon-root"
                data-testid="CheckCircleIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
                />
              </svg>
            </div>
            <div
              class="MuiBox-root css-1fjtzvx"
            >
              <div
                class="MuiBox-root css-axw7ok"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-fe9zkl-MuiTypography-root"
                >
                  Anonymous
                </p>
              </div>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                Paid on 2/14/2024
              </span>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-19ajev3-MuiTypography-root"
            >
              500
               XLM
            </p>
          </div>
          <div
            class="MuiBox-root css-acdvl8"
          >
            <div
              class="MuiBox-root css-16va24"
            >
              2
            </div>
            <div
              class="MuiBox-root css-1fjtzvx"
            >
              <div
                class="MuiBox-root css-axw7ok"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-fe9zkl-MuiTypography-root"
                >
                  Anonymous
                </p>
                <div
                  class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-filledPrimary css-vs6lbs-MuiChip-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorPrimary css-1umw9bq-MuiSvgIcon-root"
                    data-testid="EmojiEventsIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
                    />
                  </svg>
                  <span
                    class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                  >
                    Next Payout
                  </span>
                </div>
              </div>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                Est. 3/15/2024
              </span>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-10tiths-MuiTypography-root"
            >
              500
               XLM
            </p>
          </div>
          <div
            class="MuiBox-root css-1pdctl7"
          >
            <div
              class="MuiBox-root css-1lxlwnh"
            >
              3
            </div>
            <div
              class="MuiBox-root css-1fjtzvx"
            >
              <div
                class="MuiBox-root css-axw7ok"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-fe9zkl-MuiTypography-root"
                >
                  Anonymous
                </p>
              </div>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                Est. 4/14/2024
              </span>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-19ajev3-MuiTypography-root"
            >
              500
               XLM
            </p>
          </div>
        </div>
      </div>
      <div
        data-testid="app-card"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 css-wi73g9-MuiTypography-root"
        >
          Insurance
        </h3>
        <div
          data-testid="insurance-panel"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`GroupDetailPage snapshot tests > matches snapshot with error state 1`] = `
<div>
  <div
    data-testid="app-layout"
  >
    <h1>
      Group Details
    </h1>
    <div
      data-testid="app-card"
    >
      <div
        class="MuiStack-root css-1sazv7p-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 css-zi892p-MuiTypography-root"
        >
          Group not found
        </h2>
        <div
          class="MuiBox-root css-10egq61"
        >
          <button
            class="btn btn-primary btn-md"
            role="button"
          >
            Try Again
          </button>
          <button
            class="btn btn-secondary btn-md"
            role="button"
          >
            Go Back
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GroupDetailPage snapshot tests > matches snapshot with full group data 1`] = `
<div>
  <div
    data-testid="app-layout"
  >
    <h1>
      Alpha Savings Circle
    </h1>
    <div
      class="MuiStack-root css-v2woy3-MuiStack-root"
    >
      <div
        data-testid="app-card"
      >
        <div
          class="MuiStack-root css-1sazv7p-MuiStack-root"
        >
          <div
            class="MuiBox-root css-1qocved"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 css-o2za6n-MuiTypography-root"
            >
              Alpha Savings Circle
            </h2>
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-filledSuccess css-10iq40h-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
              >
                active
              </span>
            </div>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-k16oju-MuiTypography-root"
          >
            Monthly savings pool for community members
          </p>
          <div
            class="MuiBox-root css-0"
          >
            <div
              class="MuiBox-root css-wax5jp"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
              >
                Progress
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
              >
                60.0
                %
              </p>
            </div>
            <span
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="60"
              class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-2v94yv-MuiLinearProgress-root"
              role="progressbar"
            >
              <span
                class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
                style="transform: translateX(-40%);"
              />
            </span>
            <span
              class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
            >
              300
               / 
              500
               XLM
            </span>
          </div>
          <div
            class="MuiBox-root css-13rcduy"
          >
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-8m2o99-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
              >
                5 members
              </span>
            </div>
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-8m2o99-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
              >
                monthly
              </span>
            </div>
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-outlinedPrimary css-19gasz3-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
              >
                100 XLM / cycle
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        data-testid="app-card"
      >
        <div
          class="MuiBox-root css-10rrmwz"
        >
          <div
            class="MuiBox-root css-3caazb"
          >
            <div
              data-testid="contribution-flow"
            />
          </div>
          <div
            class="MuiBox-root css-10egq61"
          >
            <button
              class="btn btn-secondary btn-md"
              role="button"
            >
              Share Group
            </button>
            <button
              type="button"
            >
              Export report
            </button>
          </div>
        </div>
      </div>
      <div
        data-testid="app-card"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 css-wi73g9-MuiTypography-root"
        >
          Member Contributions by Cycle
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body2 css-19b5ozw-MuiTypography-root"
        >
          Shows whether each member has paid (✓), missed (✗), or has a pending contribution for each cycle.
        </p>
        <div
          class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiTableContainer-root css-lk5pgi-MuiPaper-root-MuiTableContainer-root"
        >
          <table
            class="MuiTable-root css-1xwxv7r-MuiTable-root"
          >
            <thead
              class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head css-1qalj09-MuiTableRow-root"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-8pm5ul-MuiTableCell-root"
                  scope="col"
                >
                  Member
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeSmall css-16bviqr-MuiTableCell-root"
                  scope="col"
                >
                  Cycle 
                  1
                  <div
                    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-filledSuccess css-n9njq5-MuiChip-root"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                    >
                      completed
                    </span>
                  </div>
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeSmall css-16bviqr-MuiTableCell-root"
                  scope="col"
                >
                  Cycle 
                  2
                  <div
                    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-filledPrimary css-1xmj4fw-MuiChip-root"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                    >
                      active
                    </span>
                  </div>
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall css-1rbfj31-MuiTableCell-root"
                  scope="col"
                >
                  Total
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-hover css-1xtozoh-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-653opj-MuiAvatar-root"
                    >
                      A
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
                      >
                        Anonymous
                      </p>
                      <span
                        class="MuiTypography-root MuiTypography-caption css-hqw96t-MuiTypography-root"
                      >
                        GMEMBE
                        …
                        BER1
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Missed"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19vled7-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="CancelIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12z"
                    />
                  </svg>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Pending"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-9144eg-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="AccessTimeIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall css-17j8okc-MuiTableCell-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-vi8kcg-MuiTypography-root"
                  >
                    300
                     XLM
                  </p>
                </td>
              </tr>
              <tr
                class="MuiTableRow-root MuiTableRow-hover css-1xtozoh-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-653opj-MuiAvatar-root"
                    >
                      A
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
                      >
                        Anonymous
                      </p>
                      <span
                        class="MuiTypography-root MuiTypography-caption css-hqw96t-MuiTypography-root"
                      >
                        GMEMBE
                        …
                        BER2
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Missed"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19vled7-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="CancelIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12z"
                    />
                  </svg>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Pending"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-9144eg-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="AccessTimeIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall css-17j8okc-MuiTableCell-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-vi8kcg-MuiTypography-root"
                  >
                    300
                     XLM
                  </p>
                </td>
              </tr>
              <tr
                class="MuiTableRow-root MuiTableRow-hover css-1xtozoh-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-653opj-MuiAvatar-root"
                    >
                      A
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
                      >
                        Anonymous
                      </p>
                      <span
                        class="MuiTypography-root MuiTypography-caption css-hqw96t-MuiTypography-root"
                      >
                        GABC12
                        …
                        3XYZ
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Missed"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19vled7-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="CancelIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12z"
                    />
                  </svg>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Pending"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-9144eg-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="AccessTimeIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall css-17j8okc-MuiTableCell-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-vi8kcg-MuiTypography-root"
                  >
                    200
                     XLM
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        data-testid="app-card"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 css-wi73g9-MuiTypography-root"
        >
          Payout Rotation Timeline
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body2 css-19b5ozw-MuiTypography-root"
        >
          The order in which members receive the pooled payout. Past recipients are shown in green; the next recipient is highlighted.
        </p>
        <div
          class="MuiStack-root css-10kbc59-MuiStack-root"
        >
          <div
            class="MuiBox-root css-14rjhyx"
          >
            <div
              class="MuiBox-root css-5bm8se"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19pfla-MuiSvgIcon-root"
                data-testid="CheckCircleIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
                />
              </svg>
            </div>
            <div
              class="MuiBox-root css-1fjtzvx"
            >
              <div
                class="MuiBox-root css-axw7ok"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-fe9zkl-MuiTypography-root"
                >
                  Anonymous
                </p>
              </div>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                Paid on 2/14/2024
              </span>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-19ajev3-MuiTypography-root"
            >
              500
               XLM
            </p>
          </div>
          <div
            class="MuiBox-root css-acdvl8"
          >
            <div
              class="MuiBox-root css-16va24"
            >
              2
            </div>
            <div
              class="MuiBox-root css-1fjtzvx"
            >
              <div
                class="MuiBox-root css-axw7ok"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-fe9zkl-MuiTypography-root"
                >
                  Anonymous
                </p>
                <div
                  class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-filledPrimary css-vs6lbs-MuiChip-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorPrimary css-1umw9bq-MuiSvgIcon-root"
                    data-testid="EmojiEventsIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
                    />
                  </svg>
                  <span
                    class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                  >
                    Next Payout
                  </span>
                </div>
              </div>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                Est. 3/15/2024
              </span>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-10tiths-MuiTypography-root"
            >
              500
               XLM
            </p>
          </div>
          <div
            class="MuiBox-root css-1pdctl7"
          >
            <div
              class="MuiBox-root css-1lxlwnh"
            >
              3
            </div>
            <div
              class="MuiBox-root css-1fjtzvx"
            >
              <div
                class="MuiBox-root css-axw7ok"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-fe9zkl-MuiTypography-root"
                >
                  Anonymous
                </p>
              </div>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                Est. 4/14/2024
              </span>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-19ajev3-MuiTypography-root"
            >
              500
               XLM
            </p>
          </div>
        </div>
      </div>
      <div
        data-testid="app-card"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 css-wi73g9-MuiTypography-root"
        >
          Insurance
        </h3>
        <div
          data-testid="insurance-panel"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`GroupDetailPage snapshot tests > matches snapshot with loading state 1`] = `
<div>
  <div
    data-testid="app-layout"
  >
    <h1>
      Group Details
    </h1>
    <div
      data-testid="app-card"
    >
      <span
        class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate css-1txyin7-MuiLinearProgress-root"
        role="progressbar"
      >
        <span
          class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate css-lcqqge-MuiLinearProgress-bar1"
        />
        <span
          class="MuiLinearProgress-bar MuiLinearProgress-bar2 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar2Indeterminate css-lfb3c7-MuiLinearProgress-bar2"
        />
      </span>
    </div>
  </div>
</div>
`;
